# youtube-summarizer-server

./: Cargo.toml  Dockerfile  README.md  compose.yaml  justfile  rustfmt.toml
.github/workflows/: verify.yaml
examples/: quick_dev.rs
src/: error.rs  main.rs  model.rs
src/web/: routes.rs
src/web/routes/: greeting.rs  login.rs  transcript.rs
src/web/services/: transcript.rs
